[tool.poetry]
name = "gpt-chatter"
version = "0.1.0"
description = ""
authors = ["Kasymkhan <kasymkhankhubievnis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
openai = "^1.59.7"
pydantic = "^2.10.5"
watchdog = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
